# worksla

./: .env  .env.example  .gitignore  ADMIN_GUIDE.md  ALL_TASKS_COMPLETED.md  API.md  COMPLETION_REPORT.md  DATA_SCHEMA_MAPPING.md  DB_SCHEMA.md  DEPLOY.md  DEPLOYMENT_REPORT.md  DESIGN_SYSTEM_GUIDE.md  DOCUMENTATION_INDEX.md  FINAL_PROJECT_REPORT.md  Makefile  NEIGHBOR_BASED_TIME_CALCULATION_REPORT.md  PHASE2_DASHBOARD_REDESIGN.md  PHASE3_REPORTS_REDESIGN.md  PHASE_1_4_COMPLETE.md  PREMIUM_UI_DESIGN_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  REACT_HOOKS_FIX_SUMMARY.md  README.md  README_COMPLETION.md  README_UI_REDESIGN.md  REDESIGN_COMPLETE_SUMMARY.md  REDESIGN_COMPLETION_SUMMARY.md  REDESIGN_SUMMARY.md  REDESIGN_TEST_GUIDE.md  SECURITY.md  SYSTEM_ANALYSIS.md  TIMELINE_UPDATE.md  TIME_IN_STATUS_ENHANCEMENT_REPORT.md  UI_IMPLEMENTATION_GUIDE.md  UI_REDESIGN_FINAL_REPORT.md  UI_REDESIGN_IMPLEMENTATION_GUIDE.md  UI_REDESIGN_PROGRESS.md  UI_REDESIGN_SUMMARY.md  USER_GUIDE.md  USER_GUIDE_NEW.md  (+10 more)
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: admin.py  auth.py  (+3 more)
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  assignee_allowlist.py  audit_log.py  session.py  setting.py  user.py  wp_cache.py
backend/app/repositories/: assignee_repository.py  audit_repository.py  setting_repository.py  settings_repository.py  user_repository.py  wp_cache_repository.py
backend/app/schemas/: __init__.py
backend/app/services/: openproject_client.py  wp_sync.py
backend/scripts/: init_db.py  seed_admin.py
(+110 files in other folders)
